--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,29 @@
+nav{
+    box-shadow: 0 0 10px silver;
+}
 .slide{
     height: 40vh;
     object-fit: cover;
 }
 .card{
-    width: 18rem;
+    width: 15rem;
     margin: 10px;
+}
+.card:hover{
+    box-shadow: 0 0 10px silver;
+}
+.card-img-top{
+    object-fit: cover;
+    height:10rem;
+}
+.bigImage{
+    width:100%;
+    height:60vh;
+    object-fit: cover;
+}
+.bigImage:hover{
+    box-shadow: 0 0 10px black;
+}
+.imageDetail{
+    margin-top: 30px;
 }
